[package]
name = "error-pages"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
maud = { version = "0.26", features = ["actix-web"] }
tracing = { version = "0.1", default-features = false, features = ["log"] }
tracing-subscriber = "0.3"